--- a/DesignPatterns.Test/DesignPatterns.Test.csproj
+++ b/DesignPatterns.Test/DesignPatterns.Test.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
     <Compile Include="SingletonTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StrategyTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DesignPatterns\DesignPatterns.csproj">
