--- a/DesignPatterns.Test/DesignPatterns.Test.csproj
+++ b/DesignPatterns.Test/DesignPatterns.Test.csproj
@@ -52,6 +52,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="AbstractFactoryTests.cs" />
+    <Compile Include="CommandTests.cs" />
     <Compile Include="DecoratorTests.cs" />
     <Compile Include="FactoryTests.cs" />
     <Compile Include="ObserverTests.cs" />
