--- a/DesignPatterns/DesignPatterns.csproj
+++ b/DesignPatterns/DesignPatterns.csproj
@@ -117,6 +117,11 @@
     <Compile Include="Creational\Singleton\President.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Structural\Adapter\TurkeyAdapter.cs" />
+    <Compile Include="Structural\Adapter\IDuck.cs" />
+    <Compile Include="Structural\Adapter\ITurkey.cs" />
+    <Compile Include="Structural\Adapter\MallardDuck.cs" />
+    <Compile Include="Structural\Adapter\WildTurkey.cs" />
     <Compile Include="Structural\Decorator\DarkRoast.cs" />
     <Compile Include="Structural\Decorator\Espresso.cs" />
     <Compile Include="Structural\Decorator\IBeverage.cs" />
