--- a/DesignPatterns.Test/DesignPatterns.Test.csproj
+++ b/DesignPatterns.Test/DesignPatterns.Test.csproj
@@ -55,6 +55,7 @@
     <Compile Include="AdapterTests.cs" />
     <Compile Include="CommandTests.cs" />
     <Compile Include="DecoratorTests.cs" />
+    <Compile Include="FacadeTests.cs" />
     <Compile Include="FactoryTests.cs" />
     <Compile Include="ObserverTests.cs" />
     <Compile Include="SimpleFactoryTests.cs" />
