adding in iterator pattern

--- a/DesignPatterns.Test/DesignPatterns.Test.csproj
+++ b/DesignPatterns.Test/DesignPatterns.Test.csproj
@@ -59,6 +59,7 @@
     <Compile Include="DecoratorTests.cs" />
     <Compile Include="FacadeTests.cs" />
     <Compile Include="FactoryTests.cs" />
+    <Compile Include="IteratorTests.cs" />
     <Compile Include="ObserverTests.cs" />
     <Compile Include="SimpleFactoryTests.cs" />
     <Compile Include="SingletonTests.cs" />
