--- a/DesignPatterns.Test/DesignPatterns.Test.csproj
+++ b/DesignPatterns.Test/DesignPatterns.Test.csproj
@@ -8,7 +8,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>DesignPatterns.Test</RootNamespace>
     <AssemblyName>DesignPatterns.Test</AssemblyName>
-    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
@@ -56,6 +56,7 @@
     <Compile Include="AbstractFactoryTests.cs" />
     <Compile Include="AdapterTests.cs" />
     <Compile Include="CommandTests.cs" />
+    <Compile Include="CompositeTests.cs" />
     <Compile Include="DecoratorTests.cs" />
     <Compile Include="FacadeTests.cs" />
     <Compile Include="FactoryTests.cs" />
