--- a/DesignPatterns.Test/DesignPatterns.Test.csproj
+++ b/DesignPatterns.Test/DesignPatterns.Test.csproj
@@ -65,6 +65,7 @@
     <Compile Include="SimpleFactoryTests.cs" />
     <Compile Include="SingletonTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StateTests.cs" />
     <Compile Include="StrategyTests.cs" />
     <Compile Include="TemplatePattern.cs" />
   </ItemGroup>
