--- a/DesignPatterns/DesignPatterns.csproj
+++ b/DesignPatterns/DesignPatterns.csproj
@@ -79,6 +79,12 @@
     <Compile Include="Behavioral\State\IGumballMachineState.cs" />
     <Compile Include="Behavioral\State\NoQuarterState.cs" />
     <Compile Include="Behavioral\State\OutOfGumballsState.cs" />
+    <Compile Include="Behavioral\Strategy\CompleteDuckSim\DuckClasses.cs" />
+    <Compile Include="Behavioral\Strategy\CompleteDuckSim\DuckSimulator.cs" />
+    <Compile Include="Behavioral\Strategy\CompleteDuckSim\Goose.cs" />
+    <Compile Include="Behavioral\Strategy\CompleteDuckSim\GooseAdapter.cs" />
+    <Compile Include="Behavioral\Strategy\CompleteDuckSim\IQuackable.cs" />
+    <Compile Include="Behavioral\Strategy\CompleteDuckSim\QuackCounter.cs" />
     <Compile Include="Behavioral\Strategy\DuckSim\Duck.cs" />
     <Compile Include="Behavioral\Strategy\DuckSim\FlyBehaviors.cs" />
     <Compile Include="Behavioral\Strategy\DuckSim\IFlyBehavior.cs" />
