adding in observer

--- a/DesignPatterns/DesignPatterns.csproj
+++ b/DesignPatterns/DesignPatterns.csproj
@@ -80,11 +80,19 @@
     <Compile Include="Behavioral\State\NoQuarterState.cs" />
     <Compile Include="Behavioral\State\OutOfGumballsState.cs" />
     <Compile Include="Behavioral\Strategy\CompleteDuckSim\DuckClasses.cs" />
+    <Compile Include="Behavioral\Strategy\CompleteDuckSim\DuckCounterFactory.cs" />
+    <Compile Include="Behavioral\Strategy\CompleteDuckSim\DuckFactory.cs" />
     <Compile Include="Behavioral\Strategy\CompleteDuckSim\DuckSimulator.cs" />
+    <Compile Include="Behavioral\Strategy\CompleteDuckSim\Flock.cs" />
     <Compile Include="Behavioral\Strategy\CompleteDuckSim\Goose.cs" />
     <Compile Include="Behavioral\Strategy\CompleteDuckSim\GooseAdapter.cs" />
+    <Compile Include="Behavioral\Strategy\CompleteDuckSim\IDuckFactory.cs" />
+    <Compile Include="Behavioral\Strategy\CompleteDuckSim\IQuackObserver.cs" />
     <Compile Include="Behavioral\Strategy\CompleteDuckSim\IQuackable.cs" />
+    <Compile Include="Behavioral\Strategy\CompleteDuckSim\IQuackObservable.cs" />
     <Compile Include="Behavioral\Strategy\CompleteDuckSim\QuackCounter.cs" />
+    <Compile Include="Behavioral\Strategy\CompleteDuckSim\QuackObservable.cs" />
+    <Compile Include="Behavioral\Strategy\CompleteDuckSim\QuackologistObserver.cs" />
     <Compile Include="Behavioral\Strategy\DuckSim\Duck.cs" />
     <Compile Include="Behavioral\Strategy\DuckSim\FlyBehaviors.cs" />
     <Compile Include="Behavioral\Strategy\DuckSim\IFlyBehavior.cs" />
